Fixed URL, fixed overflow issues

--- a/task/task.css
+++ b/task/task.css
@@ -4,6 +4,7 @@ body {
   padding: 40px;
   min-height: 100vh;
   display: flex;
+  overflow: hidden;
 }
 
 main {
@@ -76,9 +77,12 @@ button:hover {
 }
 
 #taskList {
+  position: relative;
   background-color: blue;
-  width: 100vw;
+  width: 100%;
   margin-top: 0;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .task {
@@ -92,6 +96,9 @@ button:hover {
   position: absolute;
   cursor: grab;
   user-select: none;
+  background-size: cover;
+  background-position: center;
+  /* Gets the background-image from task.js */
 }
 
 .task:active {
